--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "less": "less-watch-compiler ./styles ./build",
+    "less": "less-watch-compiler ./styles ./build styles.less styles.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
